# crud/internal/dto/dto.go
@@ -15,3 +15,7 @@ type LoginInput struct {
 	Email  string  `json:"email"`
 	Password string `json:"password"`
 }
+
+type AccessToken struct {
+	Token string `json:"token"`
+}
